--- a/iLogicdotnet/iLogicdotnet/app.config
+++ b/iLogicdotnet/iLogicdotnet/app.config
@@ -113,6 +113,12 @@
             <setting name="panelDrawingNameInternal" serializeAs="String">
                 <value>Drawingildotnet</value>
             </setting>
+            <setting name="RulesFileNameDelimiter" serializeAs="String">
+                <value>-</value>
+            </setting>
+            <setting name="DefaultRulesFileName" serializeAs="String">
+                <value />
+            </setting>
         </iLogicdotnet.My.MySettings>
     </userSettings>
 </configuration>
